--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Demo</title>
+    <title>US Weather Monitor</title>
   </head>
   <body>
     <div id="root"></div>
