--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <!-- You MUST replace this API key with your own google maps enabled one. -->
+    <!-- https://console.cloud.google.com/apis/credentials?project=weather-monitor-213621 -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmBXJLxgO-Ban6gVq9VmrGe-59X3fDWdM&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
