--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!-- You MUST replace this API key with your own google maps enabled one. -->
     <!-- https://console.cloud.google.com/apis/credentials?project=weather-monitor-213621 -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmBXJLxgO-Ban6gVq9VmrGe-59X3fDWdM&libraries=places"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&libraries=places"></script>-->
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
