Fix the search feature

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <!-- You MUST replace this API key with your own google maps enabled one. -->
     <!-- https://console.cloud.google.com/apis/credentials?project=weather-monitor-213621 -->
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&libraries=places"></script>-->
+    <!--- TODO: Do a better job of restricting this key -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV1ucjH1EBRAteeoHJ0yHA-CAlx2IPpB8&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
